# StackGraphExporter

./: .gitignore  Cargo.toml  Measurements.md  README.md
src/: cfl_querier.rs  cfl_simplifier.rs  converter.rs  csv.rs  dot.rs  from_serde.rs  grammar_cfg.rs  grammar_kt.rs  loader.rs  main.rs  sg_paths_extractor.rs  types.rs
src/artifacts/: cfl_display_symbol.rs  csv.rs  dot.rs  g.rs  grammar_cfg.rs  grammar_cnf.rs  grammar_kt.rs  grammar_kt_pieces.rs  mod.rs  progress_event.rs
src/cfl_builder/: builder.rs  cfl_simplifier.rs  converter.rs  mod.rs  progress_event.rs
src/cfl_query/: cfl_querier.rs  kotgll_query.rs  mod.rs  progress_event.rs  ucfs_query.rs
src/cli/: args.rs  cli.rs  command_processor.rs  engine.rs  interactive.rs  mod.rs
src/conversion/: builder.rs  indexers.rs  mod.rs  path_extractor.rs  progress_event.rs  query.rs  resolver.rs
src/core/: cfl_graph.rs  mod.rs  stack_graph.rs  stats.rs
src/error/: mod.rs
src/io/: mod.rs  on_same_console_line.rs  progress_event.rs  read_line.rs  term.rs
src/loading/: build.rs  discovery.rs  language.rs  loader.rs  merge.rs  mod.rs  progress_event.rs
src/sg_builder/: builder.rs  indexers.rs  mod.rs  parsers.rs  progress_event.rs
src/sg_query/: mod.rs  progress_event.rs  query.rs
src/unsupported_features_cleaner/: cleaner.rs  constants.rs  java_parser.rs  mod.rs  progress_event.rs  token.rs
