[package]
name = "stackgraph_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
rand = "0.8"
walkdir = "2.3"
thiserror = "1.0"
crossterm = "0.29.0"
rayon = "1.11.0"
clap = { version = "4.5.49", features = ["derive"] }
indicatif = "0.17"

tree-sitter-java = "0.23.4"
tree-sitter-python = "0.23.5"
tree-sitter-stack-graphs = "0.10"
tree-sitter-stack-graphs-java = "0.5.0"
tree-sitter-stack-graphs-python = "0.3.0"

stack-graphs = { version = "0.14", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = { version = "0.9", optional = true }

[features]
logging = ["env_logger"]
